--- a/log_collect/index.html
+++ b/log_collect/index.html
@@ -3,16 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!--<script src="tracker.js"></script>-->
-    <script>
-        function guid() {
-            return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function (c) {
-                var r = Math.random() * 16 | 0, v = c == 'x' ? r : (r & 0x3 | 0x8);
-                return v.toString(16);
-            });
-        }
-        alert(guid())
-    </script>
+    <script src="tracker.js"></script>
 </head>
 <body>
 
