js sdk 开发完毕，目前在进行flume的agent配置

--- a/log_collect/index.html
+++ b/log_collect/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="tracker.js"></script>
+    <script src="http://mini1/tracker.js"></script>
+    <script>
+        function btnSearch() {
+            var keyword = document.getElementById("kw").value;
+            window.__AE__.searchEvent(keyword);
+        }
+        function addCart() {
+            var pid = document.getElementById("img1").getAttribute("data-sn");
+            window.__AE__.addCartEvent(pid);
+        }
+    </script>
 </head>
 <body>
-
+<input type="text" id="kw" style="width: 500px;"><input type="button" value="搜索" onclick="btnSearch()">
+<img src="1.jpg" style="width: 50%;height: 50%" data-sn="001" id="img1"><input type="button" value="加入购物车"onclick="addCart()">
 </body>
 </html>
